<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.jbariel.example.reflection</groupId>
	<artifactId>example-reflect-and-crud</artifactId>
	<version>1.0.0</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>

		<proj.main-class>com.jbariel.example.reflection.Entry</proj.main-class>

		<dep.slf4j-simple.version>1.7.29</dep.slf4j-simple.version>
		<dep.commons-lang3.version>3.9</dep.commons-lang3.version>

		<dep.junit.version>5.6.0-M1</dep.junit.version>
		<dep.junit.surefire.version>1.3.2</dep.junit.surefire.version>

		<dep.reflections.version>0.9.12</dep.reflections.version>

		<plugin.maven-jar.version>3.2.0</plugin.maven-jar.version>
		<plugin.maven-assembly.version>3.2.0</plugin.maven-assembly.version>
		<plugin.maven-compiler.version>3.8.1</plugin.maven-compiler.version>
		<plugin.maven-surefire.version>3.0.0-M4</plugin.maven-surefire.version>
	</properties>

	<dependencyManagement>
		<dependencies>

		</dependencies>
	</dependencyManagement>

	<dependencies>

		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${dep.slf4j-simple.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${dep.commons-lang3.version}</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>${dep.reflections.version}</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${dep.junit.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${dep.junit.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine -->
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>${dep.junit.version}</version>
			<scope>test</scope>
		</dependency>


	</dependencies>

	<build>
		<defaultGoal>clean install</defaultGoal>

		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${plugin.maven-jar.version}</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>${proj.main-class}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-assembly-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<!-- <version>${plugin.maven-assembly.version}</version> -->
				<configuration>
					<finalName>app</finalName>
					<archive>
						<manifest>
							<mainClass>${proj.main-class}</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id> <!-- this is used for inheritance merges -->
						<phase>package</phase> <!-- bind to the packaging phase -->
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${plugin.maven-compiler.version}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${plugin.maven-surefire.version}</version>
				<configuration>
					<!-- <forkCount>0</forkCount> -->
					<!-- <reuseForks>true</reuseForks> -->
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>

